err/u1-test-utils.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/fabfile'...
Compiling './lib/python3.5/site-packages/fabfile/development.py'...
***   File "./lib/python3.5/site-packages/fabfile/development.py", line 44
    print 'Totals: ran({0}), skipped({1}), errors({2}), failures({3})'.format(
                                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setup_vm'...
Listing './lib/python3.5/site-packages/setup_vm/bin'...
Compiling './lib/python3.5/site-packages/setup_vm/bin/setup_vm.py'...
***   File "./lib/python3.5/site-packages/setup_vm/bin/setup_vm.py", line 529
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setup_vm/tests'...
Compiling './lib/python3.5/site-packages/setup_vm/tests/test_setup_vm.py'...
***   File "./lib/python3.5/site-packages/setup_vm/tests/test_setup_vm.py", line 882
    os.chmod(self.test_base_dir, 0755)
                                    ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/u1_test_utils-0.5.egg-info'...
Listing './lib/python3.5/site-packages/u1testutils'...
Compiling './lib/python3.5/site-packages/u1testutils/mail.py'...
***   File "./lib/python3.5/site-packages/u1testutils/mail.py", line 93
    print 'Message %s\n%s\n' % (num, data[0][1])
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/u1testutils/pay'...
Listing './lib/python3.5/site-packages/u1testutils/pay/selftests'...
Listing './lib/python3.5/site-packages/u1testutils/pay/selftests/unit'...
Listing './lib/python3.5/site-packages/u1testutils/selftests'...
Listing './lib/python3.5/site-packages/u1testutils/selftests/django_project'...
Listing './lib/python3.5/site-packages/u1testutils/selftests/static'...
Listing './lib/python3.5/site-packages/u1testutils/selftests/unit'...
Listing './lib/python3.5/site-packages/u1testutils/sso'...
Listing './lib/python3.5/site-packages/u1testutils/sso/selftests'...
Listing './lib/python3.5/site-packages/u1testutils/sso/selftests/acceptance'...
Listing './lib/python3.5/site-packages/u1testutils/sso/selftests/unit'...
Listing './lib/python3.5/site-packages/u1testutils/sso/sst'...
Listing './lib/python3.5/site-packages/u1testutils/sst'...
Listing './lib/python3.5/site-packages/u1testutils/sst/selftests'...
Listing './lib/python3.5/site-packages/u1testutils/sst/selftests/acceptance'...
Listing './lib/python3.5/site-packages/u1testutils/sst/selftests/unit'...
Listing './lib/python3.5/site-packages/u1testutils/static'...
Listing './share'...
Listing './share/python-wheels'...
